curriculum sec 1st card done

--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -12,6 +12,10 @@ $black-lighter: rgb(17,17,17);
 $royalblue: hsl(219, 70%, 35%);
 $aqua: #0188cc;
 
+$pink-brush: hsl(359, 82%, 72%);
+$blue-brush: hsl(209, 33%, 44%);
+$green-brush: hsl(72, 46%, 55%);
+
 $red-heart: rgb(186,0,0);
 
 
