curriculum page done first draft

--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -15,6 +15,7 @@ $aqua: #0188cc;
 $pink-brush: hsl(359, 82%, 72%);
 $blue-brush: hsl(209, 33%, 44%);
 $green-brush: hsl(72, 46%, 55%);
+$orange-brush: hsl(27, 77%, 65%);
 
 $red-heart: rgb(186,0,0);
 
