--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -13,6 +13,7 @@
 
 
 @import "modules/aboutus.scss";
+@import "modules/staff.scss";
 @import "modules/program.scss";
 @import "modules/curriculum.scss";
 @import "modules/calendar.scss";
