--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -6,6 +6,7 @@
     }
     
     &__wrap {
+        color: $gray-darkest; 
         display: grid;
         grid-template-columns: min-content 1fr;
         grid-template-rows: auto auto;
@@ -16,6 +17,12 @@
     &__link {
         grid-column: 1 / 2;
         grid-row: 1 / 3;
+        color: inherit;
+        transition: color 300ms ease-out;
+        
+        &:hover {
+            color: $gray;
+        }
     }
     
     &__item {
