--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -25,7 +25,7 @@
 body {
     font-size: 100%;
     font-family: 'Lato', sans-serif;
-    
+    color: $gray-darkest;
     //overflow-x: hidden;
     
     
