--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -1,16 +1,16 @@
 @include breakpoint-set("to ems", true);
 
-$gray-light: rgb(176,176,176);
-$gray-lighter: rgb(224,224,224);
-$gray: rgb(128,128,128);
-$gray-dark: rgb(80,80,80);
-$gray-darker: rgb(51,51,51);
-$gray-darkest: rgb(32,32,32);
+$gray-light: hsl(0, 0%, 69%);
+$gray-lighter: hsl(0, 0%, 88%);
+$gray: hsl(0, 0%, 50%);
+$gray-dark: hsl(0, 0%, 31%);
+$gray-darker: hsl(0, 0%, 20%);
+$gray-darkest: hsl(0, 0%, 13%);
 
-$black-lighter: rgb(17,17,17);
+$black-lighter: hsl(0, 0%, 7%);
 
 $royalblue: hsl(219, 70%, 35%);
-$aqua: #0188cc;
+$aqua: hsl(200, 99%, 40%);
 
 $pink-brush: hsl(359, 82%, 72%);
 $blue-brush: hsl(209, 33%, 44%);
