--- a/scss/modules/_aboutus.scss
+++ b/scss/modules/_aboutus.scss
@@ -14,23 +14,95 @@
     justify-content: center;
     margin-bottom: 5em;
     background-size: cover;
+    
+    background-attachment: fixed;
 }
 
 .hero__heading {
     color: #fff;
 }
 
-/******* 1st accordion *********/
+
 .aboutus {
+    max-width: 1280px;
+    margin: 0 auto;
+    
+    &__wrap {
+        width: 70%;
+        margin: 6em auto 0 auto;
+    }
+    
+    &__sect {
+        display: grid;
+        grid-template-columns: auto 1fr;
+        grid-template-rows: auto auto;
+        grid-gap: 1.5em 1.25em;
+        margin-bottom: 3em;
+    }
+    
+    &__imgwrap {
+        background: url('../img/blue-circle-bubble.png') no-repeat top left;
+        height: 60px;
+        width: 58px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    &__icon {
+        fill: #fff;
+        width: 1.4em;
+        height: 1.4em;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+    
+    &__hdg {
+        font-weight: 300;
+        position: relative;
+        font-size: 1.6em;
+        justify-self: start;
+        align-self: center;
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+        
+        &::after {
+            content: "";
+            position: absolute;
+            height: 1px;
+            background-color: $gray-lighter;
+            width: 1.5em;
+            bottom: -.5em;
+            left: 0;
+        }
+    }
+    
+    &__summary {
+        font-size: 1.1em;
+        line-height: 1.4;
+        grid-column: 1 / 3;
+        grid-row: 2 / 3;
+        
+    }
+    
+}
+
+
+
+
+
+/******* 1st accordion *********/
+/*
+.aboutus {
+    
     max-width: 1280px;
     margin: 0 auto 200px auto;
     background-color: #ccc;
-    
+
     &__main-wrap {
         width: 90%;
         margin: 0 auto;
-        
-        overflow: hidden; // keeps sections from appearing at bottom on height transition
+        overflow: hidden; 
     }
     
     &__tabs { 
@@ -132,12 +204,14 @@
 }
 
 
+*/
 
 
 
 
 
 /**************** 2nd accordion *****************/
+
 
 .about-us-2 {
     max-width: 1280px;
@@ -204,9 +278,6 @@ div.accordion-content {
     font-family: 'Grand Hotel';
     font-size: 1.2em;
 }
-
-
-
 
 
 
