--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -49,19 +49,50 @@
         padding: 2em;
         left: 10%;
         right: 10%;
-        border-bottom: 3px solid $pink-brush;
+        z-index: 3;
+        //border-bottom: 3px solid $pink-brush;
     }
     
-    &__summary--blue {
-        border-bottom: 3px solid $blue-brush;
+    &__summary:hover::after {
+        height: 100%;
     }
     
-    &__summary--green {
-        border-bottom: 3px solid $green-brush;
+    &__summary:hover &__title {
+        color: #fff;
+    }
+    &__summary:hover &__email {
+        color: #fff;
+    }
+    
+    &__summary:hover &__icon {
+        fill: #fff;
+    }
+    
+    &__summary::after {
+        position: absolute;
+        content: "";
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 3px;
+        background: $pink-brush;
+        z-index: 1;
+        transition: height 400ms ease-out;
+    }
+    
+    &__summary--blue::after {
+        //border-bottom: 3px solid $blue-brush;
+        background: $blue-brush;
+    }
+    
+    &__summary--green::after {
+        //border-bottom: 3px solid $green-brush;
+        background: $green-brush;
     }
     
     &__name {
-
+        position: relative;
+        z-index: 2;
     }
     
     &__email {
@@ -85,6 +116,10 @@
     &__title {
         font-style: italic;
         font-size: 1.1em;
+        
+        position: relative;
+        z-index: 2;
+        
     }
     
     
