--- a/scss/_varMixins.scss
+++ b/scss/_varMixins.scss
@@ -11,8 +11,11 @@ $black-lighter: hsl(0, 0%, 7%);
 
 $royalblue: hsl(219, 70%, 35%);
 $aqua: hsl(200, 99%, 40%);
+$complement-aqua: hsl(20, 99%, 40%);
+$complement-royalblue: hsl(39, 70%, 35%);
 
 $pink-brush: hsl(359, 82%, 72%);
+
 $blue-brush: hsl(209, 33%, 44%);
 $green-brush: hsl(72, 46%, 55%);
 $orange-brush: hsl(27, 77%, 65%);
