--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -21,7 +21,6 @@
 */
 
 
-
 body {
     font-size: 100%;
     font-family: 'Lato', sans-serif;
@@ -62,6 +61,35 @@ section {
     margin: 0 auto 3em auto;
     opacity: .5;
 }
+
+.line__subhdg {
+    max-width: 1280px;
+    text-transform: uppercase;
+    color: $gray-dark;
+    font-size: 1.75em;
+    margin: 0 auto 2em auto;
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-column-gap: .5em;
+    align-items: center;
+    letter-spacing: .02em;
+    word-spacing: .05em;
+    
+    &::before {
+        content: "";
+        height: .3125em;
+        background-image: linear-gradient(to left, $aqua, transparent);
+        border-radius: .625em;
+    }
+    
+    &::after {
+        content: "";
+        height: .3125em;
+        background-image: linear-gradient(to right, $aqua, transparent);
+        border-radius: .625em;
+    }
+}
+
 
 
 
