--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -12,23 +12,16 @@
     &__about {
         font-size: 1.1em;
         width: 80%;
-        margin: 6em auto;
+        margin: 8em auto;
         line-height: 1.5;
-    }
-    
-    &__heading {
-        text-align: center;
-        font-size: 1.4em;
-        text-transform: uppercase;
-        margin-bottom: 3em;
-        letter-spacing: .05em;
     }
     
     &__office-wrap {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-column-gap: 1.5em;
-        margin-bottom: 10em;
+        margin-bottom: 15em;
+        justify-items: center;
     }
     
     &__individual {
@@ -77,7 +70,7 @@
         height: 3px;
         background: $pink-brush;
         z-index: 1;
-        transition: height 400ms ease-out;
+        transition: height 300ms ease-out;
     }
     
     &__summary--blue::after {
@@ -267,7 +260,7 @@
     }
     
     &__teachers-table tr:nth-of-type(even) {
-        background-color: $gray-darkest;
+        background-color: $gray-dark;
     }
     
     &__teachers-table th {
