--- a/scss/modules/_aboutus.scss
+++ b/scss/modules/_aboutus.scss
@@ -81,14 +81,54 @@
         font-size: 1.1em;
         line-height: 1.4;
         grid-column: 1 / 3;
-        grid-row: 2 / 3;
+        grid-row: 2 / 3;  
+    }
+    
+    &__para {
+        margin-bottom: 1em;
+    }
+    
+    &__link {
+        color: $aqua;
+        transition: color 300ms ease-out;
         
+        &:hover {
+            color: darken($aqua, 15%);
+        }
+        
+    }
+    
+    &__quote {
+        font-style: italic;
+        font-size: 1.2em;
+        width: 100%;
+        margin: 2.5em 0;
+        //border: 1px solid $gray-lighter;
+        //border-left: 10px solid $aqua;
+        //padding: 2em 4em 2em 2em;
+        padding-right: 4em;
+        padding-left: 2em;
+        
+        display: grid;
+        grid-column-gap: 1.5em;
+        grid-template-columns: min-content 1fr;
+    }
+    
+    &__quote span {
+        font-family: sans-serif;
+        color: $gray-light;
+        font-size: 8em;
+        line-height: .5;
+        
+        grid-column: 1 / 2;
+        transform: translateY(.2em);
     }
     
 }
 
-
-
+.hay {
+    grid-column: 2 / 3;
+}
 
 
 /******* 1st accordion *********/
