--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -12,7 +12,7 @@
     &__about {
         font-size: 1.1em;
         width: 80%;
-        margin: 8em auto;
+        margin: 6em auto 8em auto;
         line-height: 1.5;
     }
     
