--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -74,7 +74,7 @@
     }
     
     &__icon {
-        color: $royalblue; 
+        color: $aqua; 
         align-self: center;
         
         &::before {
