--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -56,7 +56,7 @@
         transition: color 300ms ease-out;
         
         &:hover {
-            color: darken($aqua, 10%);
+            color: lighten($aqua, 10%);
         }
     }
 
@@ -130,7 +130,7 @@
         transition: color 300ms ease-in;
         
         &:hover {
-            color: darken($aqua, 10%);
+            color: lighten($aqua, 10%);
         }
     }
     
