--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -72,13 +72,14 @@
     text-transform: uppercase;
     display: inline-block;
     color: #fff;
-    background-color: $royalblue;
+    background-color: $aqua;
     padding: 1em 2em;
     border-radius: 99em;
+    box-shadow: 1px 1px 2px rgba(0,0,0,.4);
     transition: all 300ms ease-out;
     
     &:hover {
-        background-color: lighten($royalblue, 10%);
+        background-color: darken($aqua, 10%);
     }
     
 }
