--- a/scss/modules/_calendar.scss
+++ b/scss/modules/_calendar.scss
@@ -1,8 +1,22 @@
 
 
 .hero__wrap-2.calendar {
-    background-image: url('../img/hero2.jpg');
-    height: 50vh;
+    //background-image: url('../img/hero2.jpg');
+    height: 0vh;
+    margin-bottom: 0;
+}
+
+.calendar--wrap {
+    background-image: url('../img/cloud-bg.png');
+    background-color: hsl(185, 100%, 30%);
+    background-attachment: fixed;
+    padding-top: 10em;
+    padding-bottom: 10em;
+}
+
+
+.footer.cal {
+    background-image: linear-gradient(to bottom, rgba(0,0,0,.5), rgba(0,0,0,.5)), url('../img/footer--bg.png');
 }
 
 
