--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,3 +1,38 @@
+/*** STYLES FOR THE MOBILE MENU ANIMATION ***/
+
+// THESE STYLES CAN PROBABLY JUST BE ADDED TO THE MAIN .header__nav-item DECLARTATION
+.header__nav-item.testt {
+    transition: all 800ms ease-out;
+    position: relative;
+}
+
+.empty.yo {
+    //transform: scale(50);
+    //width: 116px;
+    //height: 40px;
+     transform: scale(50) rotate(180deg);
+}
+
+.empty {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: "";
+    z-index: -1;
+    transform: scale(1) rotate(0);
+    background-color: #fff;
+    //width: 0;
+    //height: 0;
+    //transform: scale(.1);
+    transition: all 400ms ease-in;
+    pointer-events: none;
+}
+/*** END STYLES FOR THE MOBILE MENU ANIMATION ***/
+
+
+
 
 .header {
        
@@ -164,8 +199,8 @@
 
     &__nav-item {
         padding: .5em 0;
-        position: relative;
-        z-index: 100;
+        //position: relative;
+        //z-index: 100;
         transition: all 300ms ease-in;
     }
     
