--- a/scss/modules/_staff.scss
+++ b/scss/modules/_staff.scss
@@ -43,7 +43,6 @@
         left: 10%;
         right: 10%;
         z-index: 3;
-        //border-bottom: 3px solid $pink-brush;
     }
     
     &__summary:hover::after {
@@ -74,12 +73,10 @@
     }
     
     &__summary--blue::after {
-        //border-bottom: 3px solid $blue-brush;
         background: $blue-brush;
     }
     
     &__summary--green::after {
-        //border-bottom: 3px solid $green-brush;
         background: $green-brush;
     }
     
@@ -234,13 +231,15 @@
 
     &__teachers-listout {
         display: none;
+        transition: all 500ms ease-out;
     }
     
     &__teachers-listout--visible {
         display: block;
+        height: 100%;
+        
         //display: flex;
         //flex-direction: column;
-        height: 100%;
     }
     
     &__teachers-table-wrap {
