--- a/scss/modules/_footer.scss
+++ b/scss/modules/_footer.scss
@@ -41,6 +41,10 @@
         margin-bottom: 1em;
     }
     
+    &__subheading-span {
+        font-weight: 700;
+    }
+    
     &__mission {
         line-height: 1.5;
     }
