--- a/scss/modules/_header.scss
+++ b/scss/modules/_header.scss
@@ -1,7 +1,7 @@
 /*** STYLES FOR THE MOBILE MENU ANIMATION ***/
 
 // THESE STYLES CAN PROBABLY JUST BE ADDED TO THE MAIN .header__nav-item DECLARTATION
-.header__nav-item.testt {
+/*.header__nav-item.testt {
     transition: all 800ms ease-out;
     position: relative;
 }
@@ -34,7 +34,7 @@
     //transform: scale(.1);
     transition: transform 400ms ease-in, opacity 200ms ease-in;
     pointer-events: none;
-}
+}*/
 /*** END STYLES FOR THE MOBILE MENU ANIMATION ***/
 
 
