--- a/scss/modules/_cards.scss
+++ b/scss/modules/_cards.scss
@@ -1,6 +1,13 @@
 
 .cards {
     
+    &__about {
+        font-size: 1.1em;
+        width: 80%;
+        margin: 6em auto 8em auto;
+        line-height: 1.5;
+    }
+    
     
     &__main-wrap {
         max-width: 1280px;
