--- a/scss/modules/_curriculum.scss
+++ b/scss/modules/_curriculum.scss
@@ -1,11 +1,17 @@
 
 
 .hero__wrap-2.curriculum {
-    background-image: url('../img/hero-curriculum.jpg');
+    background-image: url('../img/chalkboard.jpg');
 }
 
 
 .curriculum {
+    
+    &__hdg {
+        font-family: 'Bubblegum Sans', Arial;
+        font-size: 7em;
+        color: #000;
+    }
 
     &__wrap {
         max-width: 1280px;
@@ -126,13 +132,20 @@
         border-radius: 99em;
         margin: 2em auto 0 auto;
         box-shadow: 1px 1px 3px rgba(0,0,0,.4);
-        transition: all 300ms ease-out;
+        transition: 
+            background-color 300ms ease-out,
+            color 300ms ease-out,
+            transform 150ms linear;
         width: 10em;
         text-align: center;
         
         &:hover {
             background-color: #fff;
             color: $pink-brush;
+        }
+        
+        &:active {
+            transform: translate(1px, 2px);
         }
     }
     
