--- a/scss/modules/_hero.scss
+++ b/scss/modules/_hero.scss
@@ -76,10 +76,14 @@
     padding: 1em 2em;
     border-radius: 99em;
     box-shadow: 1px 1px 2px rgba(0,0,0,.4);
-    transition: all 300ms ease-out;
+    transition: background-color 300ms ease-out, transform 150ms linear;
     
     &:hover {
         background-color: darken($aqua, 10%);
+    }
+    
+    &:active {
+        transform: translate(1px, 2px);
     }
     
 }
