--- a/scss/modules/_program.scss
+++ b/scss/modules/_program.scss
@@ -118,6 +118,18 @@
         font-size: 1.1em;
         border-collapse: collapse;
         border: 1px solid #fff;
+        transition: all 800ms cubic-bezier(.75, -0.5, .25, 1.32);
+        
+        transform: translateX(200%)
+    }
+    
+    &__table--reverse {
+        transform: translateX(-200%)
+    }
+    
+    &__table--visible {
+        transform: translateX(0);
+        opacity: 1;
     }
     
     &__table tr {
@@ -125,11 +137,12 @@
     }
     
     &__table tr:nth-of-type(1n) {
-        background-color: $royalblue;
+        //background-color: $royalblue;
+        background-color: transparent;
     }
     
     &__table tr:nth-of-type(2n) {
-        background-color: darken($royalblue, 15%);
+        background-color: rgba(255,255,255,.2)
     }
     
     &__table-row--one {
@@ -145,6 +158,7 @@
     }
     
     &__table th {
+        font-family: 'Bubblegum Sans', Arial;
         text-transform: uppercase;
         text-align: center;
         padding: 1em;
