--- a/scss/modules/_curriculum.scss
+++ b/scss/modules/_curriculum.scss
@@ -1,6 +1,6 @@
 
 .hero__wrap--four {
-    background-image: url('../img/chalkboard.jpg');
+    background-image: url('../img/chalkboard--blue-highres.jpg');
 }
 
 
@@ -24,7 +24,7 @@
     &__sect {
         display: flex;
         border: 1px solid $gray-lighter;
-        margin-bottom: 4em;
+        margin-bottom: 6em;
     }
     
     &__sect--reverse {
