--- a/scss/modules/_program.scss
+++ b/scss/modules/_program.scss
@@ -1,5 +1,5 @@
 .hero__wrap--three {
-    background-image: url('../img/weekly-focus.jpg');
+    background-image: url('../img/school-room.jpg');
 }
 
 
